--- a/Digital_Clock.html
+++ b/Digital_Clock.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital Clock</title>
+    <link rel="icon" type="image/png" href="favdgcl.png">
     <link rel="stylesheet" href="proj2.css">
+    
 </head>
 <script language=JavaScript>    
     var message = "function is disabled";
